--- a/drogas.css
+++ b/drogas.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .menu{
-    width: 100%;
+    width: 100;
     height: 60px;
     background: pink;
 }
@@ -14,4 +14,8 @@
     width: 100%;
     text-align: center;
     background-color: aquamarine;
+
+}.img-mobile {
+    width: 100%;
+
 }
