--- a/drogas.css
+++ b/drogas.css
@@ -4,8 +4,8 @@
 }
 .menu{
     width: 100;
-    height: 60px;
-    background: pink;
+    height: 100px;
+    background: rgb(177, 34, 58);
 }
 .conteudo {
     width: 100%;
@@ -13,9 +13,27 @@
 .rodape {
     width: 100%;
     text-align: center;
-    background-color: aquamarine;
-
-}.img-mobile {
+    background-color: rgb(54, 6, 77);
+}
+.img-mobile {
     width: 100%;
+
+}
+@media screen and (min-width: 768px) {
+    .menu{
+        height: 100px;
+        background-color: rgb(12, 58, 11);
+    }
+    .conteudo-home{
+        display: flex;
+        padding: 10px;
+    }
+
+@media screen and (min-width: 1280px) {
+    .menu {
+        height: 150px;
+        background-color: black;
+    }
+}
 
 }
