--- a/estilo.css
+++ b/estilo.css
@@ -1,18 +1,18 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
 .caixa {
     width: 100%;
     height: 800px;
-    background-color: black;
+    background-color: rgb(52, 156, 121);
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.redondo{
+}   
+.redondo {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background-color: rgb(91, 52, 153);
+    background-color: white;
 }
