--- a/estudo.css
+++ b/estudo.css
@@ -20,19 +20,28 @@ body {
 .barra {
     background-color: rgb(61, 121, 199);
     height: 20vh;
+    grid-area: barra;
 }
 .principal{
-    background-color: red;
-    height: 40vh;
+    background-color: rgb(236, 143, 197);
+    height: 60vh;
+    grid-area: principal;
 }
 .lado{
-    background-color: blue;
-    height: 20vh;
+    background-color: rgb(165, 165, 209);
+    height: 60vh;
+    grid-area: lado;
 }
 .rodape{
-    background-color: aquamarine;
+    background-color: rgb(149, 67, 187);
     height: 20vh;
+    grid-area: rodape;
 }
 .meu-site {
-
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-areas:
+                   "barra barra"
+                   "lado principal"
+                   "rodape rodape";
 }
