--- a/dorgas.css
+++ b/dorgas.css
@@ -2,10 +2,50 @@
     margin: 0;
     padding: 0;
 }
-.menu{
+.a{
+    text-decoration: none;
+}
+.ul{
+    list-style: none;
+}
+.header{
     width: 100%;
-    height: 60px;
     background: rgb(191, 136, 212);
+    position: sticky;
+    top: 0;
+}
+.logo {
+    display: inline-block;
+    background-color: blueviolet;
+}
+#logo {
+    width: 10vh;
+    margin: 5px;
+}
+.nav {
+   max-width: 0;
+   transform: max-height .5s ease-out;
+}
+.hamburger {
+    cursor: pointer;
+    float: right;
+    padding: 35px 20px;
+}
+.hamb-line {
+    background-color: white;
+    display: block;
+    height: 2px;
+    position: relative;
+    width: 24px;
+    
+}
+.menu a {
+    display: block;
+    padding: 30px;
+    color: white;
+}
+.menu a:hover {
+    background-color: black;
 }
 .conteudo{
     width: 100%;
