--- a/estudo.css
+++ b/estudo.css
@@ -3,45 +3,45 @@
     padding: 0;
 }
 body {
-    background-color: rgb(5, 3, 83);
+    background-color: rgb(202, 135, 135);
 }
 .item {
     width: 60px;
     height: 90px;
-    background-color: rgb(152, 141, 216);
+    background-color: blue;
     color: black;
     margin: 10px;
 }
-.conteudo{
+.conteudo {
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
 
 }
 .barra {
-    background-color: rgb(61, 121, 199);
+    border-color: rgb(3, 255, 255);
     height: 20vh;
     grid-area: barra;
 }
 .principal{
-    background-color: rgb(236, 143, 197);
+    background-color: wheat;
     height: 60vh;
     grid-area: principal;
 }
-.lado{
-    background-color: rgb(165, 165, 209);
-    height: 60vh;
+.lado {
+    background-color: yellowgreen;
+    height: 80vh;
     grid-area: lado;
 }
-.rodape{
-    background-color: rgb(149, 67, 187);
+.rodape {
+    background-color: gray;
     height: 20vh;
     grid-area: rodape;
 }
 .meu-site {
     display: grid;
     grid-template-columns: 20% 80%;
-    grid-template-areas:
-                   "barra barra"
-                   "lado principal"
-                   "rodape rodape";
+    grid-template-areas: 
+                    "barra barra"
+                    "lado principal"
+                    "lado rodape";
 }
