--- a/dorgas.css
+++ b/dorgas.css
@@ -1,76 +1,179 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"); /* import font */
+:root{
+    --white: #f9f9f9;
+    --black: #1f1f21;
+    --gray: #877979;
+} /* variables*/
+
+/* Reset */
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-.a{
+body{
+    background-color: var(--white);
+    font-family: "Poppins", sans-serif;
+}
+a{
     text-decoration: none;
 }
-.ul{
+ul{
     list-style: none;
 }
+
+/* Header */
 .header{
-    width: 100%;
-    background: rgb(191, 136, 212);
+    background-color: var(--black);
+    box-shadow: 1px 1px 5px 0px var(--gray);
     position: sticky;
     top: 0;
+    width: 100%;
 }
-.logo {
+/* Logo */
+.logo{
     display: inline-block;
-    background-color: blueviolet;
+    color: var(--white);
 }
+
 #logo {
     width: 10vh;
     margin: 5px;
 }
-.nav {
-   max-width: 0;
-   transform: max-height .5s ease-out;
+
+/* Nav menu */
+.nav{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: var(--black);
+    overflow: hidden;
+
 }
-.hamburger {
+.menu a{
+    display: block;
+    padding: 30px;
+    color: var(--white);
+}
+.menu a:hover{
+    background-color: var(--gray);
+}
+.nav{
+    max-height: 0;
+    transition: max-height .5s ease-out;
+}
+
+/* Menu Icon */
+.hamb{
     cursor: pointer;
     float: right;
     padding: 35px 20px;
-}
+}/* Style label tag */
+
 .hamb-line {
-    background-color: white;
+    background: var(--white);
     display: block;
     height: 2px;
     position: relative;
     width: 24px;
-    
-}
-.menu a {
+
+} /* Style span tag */
+
+.hamb-line::before,
+.hamb-line::after{
+    background: var(--white);
+    content: '';
     display: block;
-    padding: 30px;
-    color: white;
-}
-.menu a:hover {
-    background-color: black;
-}
-.conteudo{
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
     width: 100%;
 }
-.rodape{
+.hamb-line::before{
+    top: 5px;
+}
+.hamb-line::after{
+    top: -5px;
+}
+.side-menu {
+    display: none;
+} /* Hide checkbox */
+
+
+
+/* Toggle menu icon */
+.side-menu:checked ~ nav{
+    max-height: 100%;
+}
+.side-menu:checked ~ .hamb .hamb-line {
+    background: transparent;
+}
+.side-menu:checked ~ .hamb .hamb-line::before {
+    transform: rotate(-45deg);
+    top:0;
+}
+.side-menu:checked ~ .hamb .hamb-line::after {
+    transform: rotate(45deg);
+    top:0;
+}
+
+
+
+/* Responsiveness */
+@media (min-width: 768px) {
+    .nav{
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+        background-color: transparent;
+    }
+    .menu li{
+        float: left;
+    }
+    .menu a:hover{
+        background-color: transparent;
+        color: var(--gray);
+
+    }
+
+    .hamb{
+        display: none;
+    }
+
+    #logo {
+        width: 15vh;
+        margin: 5px;
+    }
+}
+.conteudo {
+    width: 100%;
+}
+.rodape {
     width: 100%;
     text-align: center;
-    background-color: rgb(106, 28, 109);
+    background: coral;
 }
-.img-mobile{
+.img-mobile {
     width: 100%;
+    
 }
 @media screen and (min-width: 768px) {
     .menu{
         height: 100px;
-        background-color: rgb(21, 119, 122);
+        background-color: rgb(72, 49, 136);
     }
     .conteudo-home{
         display: flex;
+        padding: 10px;
+    }
+     
+   @media  screen and (min-width:1280px) {
+     .menu {
+        height: 150px;
+        background-color: rgb(100, 100, 189);
+     }
+   }
         
     }
-}
-@media screen and (min-width: 1280px){
-    .menu{
-        height: 150px;
-        background-color: rgb(170, 95, 117);
-   }
-}
