--- a/estilo.css
+++ b/estilo.css
@@ -5,14 +5,14 @@
 .caixa {
     width: 100%;
     height: 800px;
-    background-color: rgb(52, 101, 156);
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-}   
+}
 .redondo {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background-color: rgb(63, 3, 3);
+    background-color: rgb(226, 140, 180);
 }
