--- a/drogas.css
+++ b/drogas.css
@@ -29,7 +29,7 @@ ul{
     box-shadow: 1px 1px 5px 0px var(--gray);
     position: sticky;
     top: 0;
-    width: 100%;
+    width: 100%;"geral geral geral";
 }
 /* Logo */
 .logo{
@@ -112,10 +112,19 @@ ul{
     top:0;
 }
 .side-menu:checked ~ .hamb .hamb-line::after {
-    transform: rotate(45deg);
+    transform: rotate(+45deg);
     top:0;
 }
-
+.conteudo-drogas {
+    width: calc(100vw - 30px);
+    padding: 10px;
+}
+#img.png {
+    display: none;
+}
+.descrição {
+    width: 100vw;
+}
 
 .rodape {
     width: 100vw;
@@ -132,7 +141,7 @@ ul{
     grid-area: geral;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 820px) {
     .nav{
         max-height: none;
         top: 0;
@@ -155,18 +164,21 @@ ul{
     }
 
     #logo {
-        width: 15vh;
-        margin: 5px;
+        width: 8vh;
+        margin: 8px;
     }
-    .conteudo {
+    .conteudo-drogas {
+        display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-areas: 
-         "geral geral";
+        grid-template-areas: "def def";
+    }
+    .img-definição {
+        display: block;
     }
 
 }
 
-@media (min-width: 1228px) {
+@media (min-width: 1024px) {
     .nav{
         max-height: none;
         top: 0;
@@ -189,16 +201,29 @@ ul{
     }
 
     #logo {
-        width: 15vh;
-        margin: 5px;
+        width: 16vh;
+        margin: 16vh;
     }
     .conteudo {
-        grid-template-columns: 50% 50%;
-        grid-template-areas: 
-         "geral geral geral";
+        grid-template-columns: 33% 34% 33%;
+        grid-template-areas: "de def def";
     }
     .definição {
-        
+        display: flex;
+        text-align: end;
+        height: 30vh;
+        width: 30vw;
+    }
+    .img-definição{
+        display: block;
+        text-align: end;
+        height: 30vh;
+        width: 30vw;
+    }
+    #img.png {
+        display: block;
+        width: 50%;
+
     }
 
 
